--- a/style.css
+++ b/style.css
@@ -334,17 +334,18 @@ h5,h3{
   color: #fff;
   font-size: 30px;
   font-family: "Lato", sans-serif;
+  word-spacing: 3px;
   letter-spacing: 3px;
   font-weight: 700;
 }
 
-@media screen and (max-device-width: 480px) and (orientation: portrait) {
+@media screen and (max-width: 480px) and (orientation: portrait) {
   .intro-text h3 {
     font-size: 15px;
-    
+    padding: 0px;
   }
-  .main__container h1{
-    font-size: 2rem;
+  .intro-style{
+    padding: 30px 10px;
   }
 }
 
@@ -362,6 +363,13 @@ h5,h3{
   gap: 2px;
   margin: 0 100px;
   padding-bottom: 0px;
+}
+
+@media screen and (max-width:480px) {
+  .image-category{
+    margin: 0px 0px ;
+    flex-wrap: wrap;
+  }
 }
 
 .image-category img{
@@ -654,13 +662,17 @@ form, input, select, label {
   align-content: center;
   align-items: stretch; 
   margin: 0px 100px;
-  color: #fff;
+  color: #ffffffbf;
   padding-bottom: 0px;
   margin-bottom: 0px;
 }
 
+.contact-intro{
+  padding-bottom: 50px;
+}
+
 .contact-child1{
-  flex: 2;
+  flex: 3;
   align-self: flex-start;
   width: 100%;
 }
@@ -678,14 +690,24 @@ form, input, select, label {
 .form-grid{
   display: grid;
   grid-template-rows: 1fr 2fr;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 2fr 2fr;
   width: 100%;
   gap: 0px;
+  
 }
 
 .form-grid1{
   margin: 0;
   padding: 0;
+  
+}
+
+input{
+  background-color: rgba(150, 144, 162, 0.08);
+  border: 0px;
+  border-color: transparent;
+  height: 40px;
+  width: 70%;
 }
 
 section {
