--- a/style.css
+++ b/style.css
@@ -473,6 +473,33 @@ h5,h3{
   object-fit: cover;
 }
 
+@media (max-width: 768px) {
+  .showcase-gallery{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 100%;
+    margin: 0px;
+    padding: 0px 10px;
+  }
+
+  .showcase-gallery-image{
+    max-width: 100%;
+    height: 400px;
+    object-fit: cover;
+    padding: 5px 0px;
+  }
+
+  .showcase-gallery-image.one.two{
+    padding: 5px 0px;
+  }
+
+.mob{
+  max-width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
 .about-us-text{
   color: white;
   padding: 100px 0px 30px 100px
