--- a/style.css
+++ b/style.css
@@ -357,15 +357,22 @@ h5,h3{
     padding-top: 100%;
     margin: 0px auto;
     padding-left: 0px;
+    
   }
   .main__container h1{
     font-size: 2rem;
     width: 100%;
+    
   }
   .main__content{
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+  }
+
+  .main__content.container{
+    justify-content: center;
+    padding: 0px 50px;
   }
 }
 
@@ -401,6 +408,15 @@ h5,h3{
   margin: 0px 100px;
   padding: 100px 0px 15px 0px ;
   color: #fff;
+}
+
+@media (max-width: 768px) {
+  .gallery-title{
+    padding: 20px 10px;
+    margin: 0px;
+    justify-content: left;
+
+  }
 }
 
 .image-category{
@@ -444,6 +460,11 @@ h5,h3{
   height: 2px;
 }
 
+@media (max-width: 768px){
+
+
+}
+
 .showcase-gallery{
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -474,6 +495,26 @@ h5,h3{
 }
 
 @media (max-width: 768px) {
+  .showcase-gallery {
+    display: flex;
+    flex-direction: column; /* Stacks items vertically */
+    gap: 10px;
+    margin: 0px;
+    padding: 0px 10px;
+    
+  }
+
+  .showcase-gallery .mob {
+    flex: 1 1 100%; /* Makes each image take up full width */
+  }
+
+  .showcase-gallery-image {
+    width: 100%; /* Ensures images fill the container */
+    height: 300px !important; /* Maintains image aspect ratio */
+    object-fit: cover;
+  }
+
+@media (max-width: 768px) {
   
   .picture-divider-container{
     display: flex;
@@ -496,39 +537,11 @@ h5,h3{
   opacity: 1; */
   }
 
-  .showcase-gallery{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    width: 100%;
-    padding: 0px 10px;
-  }
 
-  .showcase-gallery-image{
-    justify-content: center;
-    width: 100%;
-    height: 350px;
-    opacity: 0.5;
-    padding: 5px 0px;
-  }
-
-.mob{
-  height: 200px; 
-  width: 100%;
-  /* max-width: 100%; */
-  object-fit: cover;
-}
-
-.one{
-  padding: 5px 0px;
-}
-.two{
-  padding: 5px 0px;
-}
 
 }
 
-.about-us-text{
+.about-us-title{
   color: white;
   padding: 100px 0px 30px 100px
 }
@@ -559,6 +572,10 @@ h5,h3{
 
 .about-us-small-tag{
   font-weight: lighter;
+}
+
+@media(max-width:768px) {
+  .about-us-text
 }
 
 .mini-navbar{
